# sui

./: Cargo.toml
.github/workflows/: build-sui.yml
apps/wallet/: package.json
apps/wallet/configs/environment/: .env.scalar  mnemonic.txt
apps/wallet/src/background/: db.ts
apps/wallet/src/shared/analytics/ampli/: index.ts
apps/wallet/src/ui/app/components/: PasswordInputDialog.tsx
apps/wallet/src/ui/app/components/accounts/: ZkLoginAccountWaringModal.tsx
apps/wallet/src/ui/app/components/ledger/: ConnectLedgerModal.tsx  useDeriveLedgerAccounts.ts
apps/wallet/src/ui/app/components/menu/content/: WalletSettingsMenuList.tsx
apps/wallet/src/ui/app/components/receipt-card/: TxnAddressLink.tsx
apps/wallet/src/ui/app/components/sui-apps/: index.tsx
apps/wallet/src/ui/app/components/transactions-card/: index.tsx
apps/wallet/src/ui/app/helpers/: errorMessages.ts
apps/wallet/src/ui/app/hooks/deepbook/: useDeepBookConfigs.ts  useRecognizedCoins.ts
apps/wallet/src/ui/app/pages/accounts/: BackupMnemonicPage.tsx  WelcomePage.tsx
apps/wallet/src/ui/app/pages/accounts/manage/: AccountGroup.tsx
apps/wallet/src/ui/app/pages/home/nft-details/: index.tsx
apps/wallet/src/ui/app/pages/home/onramp/: useOnrampProviders.ts
apps/wallet/src/ui/app/pages/home/tokens/: TokenIconLink.tsx  TokensDetails.tsx
apps/wallet/src/ui/app/pages/home/transactions/: CompletedTransactions.tsx
apps/wallet/src/ui/app/pages/home/transfer-coin/: SendTokenForm.tsx
apps/wallet/src/ui/app/pages/swap/: constants.ts
apps/wallet/src/ui/app/redux/slices/sui-objects/: Coin.ts
apps/wallet/src/ui/app/shared/delegated-apy/: index.tsx
apps/wallet/src/ui/app/shared/faucet/: FaucetRequestButton.tsx
apps/wallet/src/ui/app/staking/delegation-detail/: DelegationDetailCard.tsx
apps/wallet/src/ui/app/staking/home/: StakedCard.tsx
apps/wallet/src/ui/app/staking/stake/: StakeForm.tsx  StakingCard.tsx  UnstakeForm.tsx  ValidatorFormDetail.tsx  index.tsx
apps/wallet/src/ui/app/staking/validators/: SelectValidatorCard.tsx  ValidatorsCard.tsx  index.tsx
crates/scalar/: Cargo.toml
crates/scalar/proto/: types.proto
crates/scalar/src/: admin.rs  consensus_client.rs  consensus_manager.rs  handle.rs  lib.rs  main.rs  metrics.rs
crates/scalar/src/proto/: mod.rs  types.rs
crates/sui-core/src/: consensus_handler.rs
crates/sui-core/src/consensus_handler/: scalar.rs
crates/sui-indexer/src/handlers/: checkpoint_handler.rs
docker/scalar-network/: README.md  build.sh  build_container.sh  build_genesis.sh  build_release.sh  builder.Dockerfile  compose.sh  docker-compose-builder.yaml  docker-compose-scalar.yaml  docker-compose.yaml  explorer.Dockerfile  genesis.Dockerfile  indexer.Dockerfile  indexer.sh  runner.Dockerfile  rust.Dockerfile  tools.Dockerfile
docker/scalar-network/genesis/: compose-consensus.yaml  compose-validators.yaml  genesis.yaml
docker/scalar-network/genesis/overlays/: common.yaml
docker/scalar-network/genesis/static/: fullnode.yaml
docker/scalar-network/sui_config/: client.yaml  fullnode.yaml  genesis.blob  network.yaml  sui.aliases  sui.keystore
docker/sui-network/: docker-compose-env.yaml  docker-compose-scalaris.yaml
docker/sui-network/genesis/: compose-validators.yaml
docker/sui-network/genesis/overlays/: common.yaml
docker/sui-network/genesis/static/: fullnode.yaml  sui.keystore
scalar/docker/: builder.Dockerfile  builder.Dockerfile.alpine  builder.Dockerfile.arm64  builder.Dockerfile.arm64-alpine  docker-compose-arm64.yaml  docker-compose-geth.yaml  docker-compose-reth.yaml  docker-compose.yaml  reth.Dockerfile  runner.Dockerfile
scalar/scalar-test-cluster/: Cargo.toml  README.md  build.rs
scalar/scalar-test-cluster/proto/: consensus.proto
scalar/scalar-test-cluster/src/: faucet.rs  lib.rs
scalar/scalar-test-cluster/src/cluster/: builder.rs  cluster.rs  config.rs  mod.rs
scalar/scalar-test-cluster/src/config/: node_config.rs
scalar/scalar-test-cluster/src/consensus/: consensus_adapter.rs  consensus_handler.rs  consensus_listener.rs  consensus_service.rs  consensus_throughput_calculator.rs  consensus_validator.rs  mod.rs  mysticeti_adapter.rs  post_consensus_tx_reorder.rs  scalar_validator.rs  scoring_decision.rs
scalar/scalar-test-cluster/src/consensus/consensus_manager/: mod.rs  mysticeti_manager.rs  narwhal_manager.rs
scalar/scalar-test-cluster/src/consensus/consensus_types/: committee_api.rs  consensus_output_api.rs  mod.rs  ns_transaction.rs
scalar/scalar-test-cluster/src/consensus/unit_tests/: consensus_tests.rs  mysticeti_manager_tests.rs  narwhal_manager_tests.rs
scalar/scalar-test-cluster/src/core/: authority.rs  authority_aggregator.rs  authority_server.rs  execution_driver.rs  grpc_server.rs  mod.rs  safe_client.rs  scoring_decision.rs  state_accumulator.rs  storage.rs  streamer.rs  subscription_handler.rs  telemetry.rs  test_authority_clients.rs  test_utils.rs  transaction_input_loader.rs  transaction_manager.rs  verify_indexes.rs
scalar/scalar-test-cluster/src/core/authority/: authority_notify_read.rs  authority_per_epoch_store.rs  authority_per_epoch_store_pruner.rs  authority_store.rs  authority_store_pruner.rs  authority_store_tables.rs  authority_test_utils.rs  test_authority_builder.rs
scalar/scalar-test-cluster/src/core/checkpoints/: checkpoint_output.rs  mod.rs
scalar/scalar-test-cluster/src/core/checkpoints/checkpoint_executor/: mod.rs  tests.rs
scalar/scalar-test-cluster/src/core/epoch/: reconfiguration.rs
scalar/scalar-test-cluster/src/core/unit_tests/: authority_aggregator_tests.rs  authority_tests.rs  batch_transaction_tests.rs  batch_verification_tests.rs  epoch_data_tests.rs  gas_tests.rs  server_tests.rs  transaction_manager_tests.rs  transaction_tests.rs
scalar/scalar-test-cluster/src/node/: admin.rs  handle.rs  mod.rs  scalar_node.rs  validator.rs
scalar/scalar-test-cluster/src/proto/: consensus.rs  mod.rs
scalar/scalar-test-cluster/src/swarm/: container.rs  mod.rs  node.rs  swarm.rs
scalar/scripts/: build.sh  entry.sh  run.sh  start.sh  test.sh
sdk/typescript/src/: version.ts
